...
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="start_time">Start Time</string>
    <string name="other">Other</string>
    <string name="other_hours">Other Hours</string>
    <string name="tax_rules">Tax Rules</string>
    <string name="tax_type">Tax Type</string>
    <string name="taxes">Taxes</string>
    <string name="the_employer_must_have_a_name">Employer name is required.</string>
    <string name="the_extra_must_have_a_name">Extra name is required.</string>
    <string name="the_number_of_days_before_the_pay_day_is_required">Number of cutoff days before pay day is required.</string>
    <string name="the_tax_type_has_been_added_but_there_are_no_rules_yet_">Tax type added, but no rules exist yet. Would you like to add rules now?</string>
    <string name="the_tax_type_must_have_a_name">Tax type name is required.</string>
    <string name="the_work_order_must_have_an_address">Work order address is required.</string>
...
    <string name="action_clean_up">Clean Up</string>
    <string name="msg_picture_saved_locally">Picture saved locally.</string>
    <string name="msg_picture_uploaded_to_drive">Picture uploaded to Google Drive.</string>
    <string name="msg_picture_pending_upload">Saved locally. Will upload to Drive when connected.</string>
    <string name="msg_picture_link_broken">Picture link is broken or file is unavailable.</string>
    <string name="label_link_error">Link Error</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id">659552924329-ihbi24aqo9kjitctefhc3lnqgkf9ajg5.apps.googleusercontent.com</string>

    <string name="master_job_spec">Master Job Spec</string>
    <string name="parent_job_spec">Parent Job Spec</string>
    <string name="child_job_spec">Child Job Spec</string>
    <string name="work_order_number_cannot_be_blank">Work order number is required.</string>
...
